# mrif

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md
src/mrif/: __init__.py  cli.py  config.py  exceptions.py
src/mrif/core/: __init__.py  meta_core.py  state.py  update_engine.py
src/mrif/dimensions/: __init__.py  causality.py  evolution.py  identity.py  knowledge.py  reality.py  timeline.py
src/mrif/evolution/: __init__.py  evaluator.py  fork.py  merger.py
src/mrif/governance/: __init__.py  audit.py  constitutional.py  lineage.py
src/mrif/memory/: __init__.py  base.py  collective.py  episodic.py  long_term.py  semantic.py  working.py
src/mrif/research/: __init__.py  experiment.py  hypothesis.py  pipeline.py
src/mrif/utils/: __init__.py  logging.py  serialization.py
tests/: __init__.py  conftest.py
tests/test_core/: test_meta_core.py  test_state.py  test_update_engine.py
tests/test_dimensions/: test_causality.py  test_evolution.py  test_identity.py  test_knowledge.py  test_reality.py  test_timeline.py
tests/test_evolution/: test_evaluator.py  test_fork.py  test_merger.py
tests/test_governance/: test_audit.py  test_constitutional.py  test_lineage.py
tests/test_memory/: test_collective.py  test_episodic.py  test_long_term.py  test_semantic.py  test_working.py
tests/test_research/: test_experiment.py  test_hypothesis.py  test_pipeline.py
